import { Assessment } from '../../../commands/gen2-migration/_assessment';

describe('Assessment', () => {
  describe('recordResource()', () => {
    it('records a resource assessment', () => {
      const assessment = new Assessment('app', 'dev');
      assessment.recordResource({
        resource: { category: 'auth', resourceName: 'myPool', service: 'Cognito', key: 'auth:Cognito' },
        generate: 'supported',
        refactor: 'supported',
      });

      expect(assessment.resources).toHaveLength(1);
      expect(assessment.resources[0].generate).toBe('supported');
      expect(assessment.resources[0].refactor).toBe('supported');
    });

    it('handles multiple resources across categories', () => {
      const assessment = new Assessment('app', 'dev');
      assessment.recordResource({
        resource: { category: 'auth', resourceName: 'pool', service: 'Cognito', key: 'auth:Cognito' },
        generate: 'supported',
        refactor: 'supported',
      });
      assessment.recordResource({
        resource: { category: 'storage', resourceName: 'bucket', service: 'S3', key: 'storage:S3' },
        generate: 'supported',
        refactor: 'supported',
      });
      assessment.recordResource({
        resource: { category: 'geo', resourceName: 'map', service: 'Location', key: 'unsupported' },
        generate: 'unsupported',
        refactor: 'unsupported',
      });

      expect(assessment.resources).toHaveLength(3);
      expect(assessment.resources[0].generate).toBe('supported');
      expect(assessment.resources[2].generate).toBe('unsupported');
    });
  });

  describe('recordFeature()', () => {
    it('accumulates feature assessments', () => {
      const assessment = new Assessment('app', 'dev');
      assessment.recordFeature({
        feature: { name: 'Custom policies', path: 'function/myFunc/custom-policies.json' },
        generate: 'unsupported',
        refactor: 'not-applicable',
      });
      assessment.recordFeature({
        feature: { name: 'Overrides', path: 'auth/myPool/override.ts' },
        generate: 'unsupported',
        refactor: 'not-applicable',
      });

      expect(assessment.features).toHaveLength(2);
      expect(assessment.features[0].feature.name).toBe('Custom policies');
      expect(assessment.features[1].feature.name).toBe('Overrides');
    });
  });

  describe('render()', () => {
    function stripAnsi(str: string): string {
      // eslint-disable-next-line no-control-regex -- stripping ANSI escape codes for snapshot comparison
      return str.replace(/\u001b\[[0-9;]*m/g, '');
    }

    it('renders a fully supported app', () => {
      const assessment = new Assessment('myapp', 'dev');
      assessment.recordResource({
        resource: { category: 'auth', resourceName: 'pool', service: 'Cognito', key: 'auth:Cognito' },
        generate: 'supported',
        refactor: 'supported',
      });
      assessment.recordResource({
        resource: { category: 'storage', resourceName: 'bucket', service: 'S3', key: 'storage:S3' },
        generate: 'supported',
        refactor: 'supported',
      });

      expect(stripAnsi(assessment.render())).toMatchSnapshot();
    });

    it('renders an app blocked by unsupported refactor', () => {
      const assessment = new Assessment('myapp', 'dev');
      assessment.recordResource({
        resource: { category: 'auth', resourceName: 'pool', service: 'Cognito', key: 'auth:Cognito' },
        generate: 'supported',
        refactor: 'supported',
      });
      assessment.recordResource({
        resource: { category: 'geo', resourceName: 'map', service: 'Location', key: 'unsupported' },
        generate: 'unsupported',
        refactor: 'unsupported',
      });

      expect(stripAnsi(assessment.render())).toMatchSnapshot();
    });

    it('renders an app with unsupported generate but supported refactor', () => {
      const assessment = new Assessment('myapp', 'dev');
      assessment.recordResource({
        resource: { category: 'auth', resourceName: 'pool', service: 'Cognito', key: 'auth:Cognito' },
        generate: 'supported',
        refactor: 'supported',
      });
      assessment.recordResource({
        resource: { category: 'custom', resourceName: 'alarms', service: 'CloudFormation', key: 'unsupported' },
        generate: 'unsupported',
        refactor: 'supported',
      });

      expect(stripAnsi(assessment.render())).toMatchSnapshot();
    });

    it('renders features table when features are detected', () => {
      const assessment = new Assessment('myapp', 'dev');
      assessment.recordResource({
        resource: { category: 'function', resourceName: 'myFunc', service: 'Lambda', key: 'function:Lambda' },
        generate: 'supported',
        refactor: 'not-applicable',
      });
      assessment.recordFeature({
        feature: { name: 'Custom policies', path: 'function/myFunc/custom-policies.json' },
        generate: 'unsupported',
        refactor: 'not-applicable',
      });

      expect(stripAnsi(assessment.render())).toMatchSnapshot();
    });
  });
});
