// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assessment render() renders a fully supported app 1`] = `
"
Assessment for "myapp" (env: dev)

Resources

┌──────────┬──────────┬─────────┬──────────┬──────────┐
│ Category │ Resource │ Service │ Generate │ Refactor │
├──────────┼──────────┼─────────┼──────────┼──────────┤
│ auth     │ pool     │ Cognito │ ✔        │ ✔        │
├──────────┼──────────┼─────────┼──────────┼──────────┤
│ storage  │ bucket   │ S3      │ ✔        │ ✔        │
└──────────┴──────────┴─────────┴──────────┴──────────┘"
`;

exports[`Assessment render() renders an app blocked by unsupported refactor 1`] = `
"
Assessment for "myapp" (env: dev)

Resources

┌──────────┬──────────┬──────────┬──────────────────────┬────────────────────┐
│ Category │ Resource │ Service  │ Generate             │ Refactor           │
├──────────┼──────────┼──────────┼──────────────────────┼────────────────────┤
│ auth     │ pool     │ Cognito  │ ✔                    │ ✔                  │
├──────────┼──────────┼──────────┼──────────────────────┼────────────────────┤
│ geo      │ map      │ Location │ ✘ manual code needed │ ✘ blocks migration │
└──────────┴──────────┴──────────┴──────────────────────┴────────────────────┘"
`;

exports[`Assessment render() renders an app with unsupported generate but supported refactor 1`] = `
"
Assessment for "myapp" (env: dev)

Resources

┌──────────┬──────────┬────────────────┬──────────────────────┬──────────┐
│ Category │ Resource │ Service        │ Generate             │ Refactor │
├──────────┼──────────┼────────────────┼──────────────────────┼──────────┤
│ auth     │ pool     │ Cognito        │ ✔                    │ ✔        │
├──────────┼──────────┼────────────────┼──────────────────────┼──────────┤
│ custom   │ alarms   │ CloudFormation │ ✘ manual code needed │ ✔        │
└──────────┴──────────┴────────────────┴──────────────────────┴──────────┘"
`;

exports[`Assessment render() renders features table when features are detected 1`] = `
"
Assessment for "myapp" (env: dev)

Resources

┌──────────┬──────────┬─────────┬──────────┬──────────┐
│ Category │ Resource │ Service │ Generate │ Refactor │
├──────────┼──────────┼─────────┼──────────┼──────────┤
│ function │ myFunc   │ Lambda  │ ✔        │ —        │
└──────────┴──────────┴─────────┴──────────┴──────────┘

Features

┌─────────────────┬──────────────────────────────────────┬──────────┬──────────┐
│ Feature         │ Path                                 │ Generate │ Refactor │
├─────────────────┼──────────────────────────────────────┼──────────┼──────────┤
│ Custom policies │ function/myFunc/custom-policies.json │ ✘        │ —        │
└─────────────────┴──────────────────────────────────────┴──────────┴──────────┘"
`;
